--- a/Omnifood/omnifood.html
+++ b/Omnifood/omnifood.html
@@ -3,7 +3,7 @@
     <head>
       <link rel="stylesheet" type="text/css" href="http://lemufinder.com/Omnifood/Vendors/css/grid.css">
       <link rel="stylesheet" type="text/css" href="vendors/css/normalize.css">
-      <link rel="stylesheet" type="text/css" href="resources/css/style.css">
+      <link rel="stylesheet" type="text/css" href="Resources/%20CSS/style.css">
       <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,300italic' rel='stylesheet' type='text/css'>
       <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
       <link rel="stylesheet" href="main.css">
