--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
       <link rel="stylesheet" type="text/css" href="http://lemufinder.com/Omnifood/Vendors/css/grid.css">
       <link rel="stylesheet" type="text/css" href="vendors/css/normalize.css">
-      <link rel="stylesheet" type="text/css" href="Resources/%20CSS/style.css">
+      <link rel="stylesheet" type="text/css" href="Resources/CSS/style.css">
       <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,300italic' rel='stylesheet' type='text/css'>
       <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
       <link rel="stylesheet" href="main.css">
@@ -260,14 +260,14 @@
                          <div>
                              <h3>Premium</h3>
                              <p class="price">$399</p>
-                             <p class="meal">That’s only $13.30 per meal</p>
+                             <p class="meal">That's only $13.30 per meal</p>
                          </div>
                          <div>
                              <ul>
-                                 <li>&#10003; 1 meal every day</li>
-                                 <li>&#10003; Order 24/7</li>
-                                 <li>&#10003; Access to newest creations</li>
-                                 <li>&#10003; Free delivery</li>
+                                 <li>1 meal every day</li>
+                                 <li>Order 24/7</li>
+                                 <li>Access to newest creations</li>
+                                 <li>Free delivery</li>
                              </ul>
                          </div>
                          <div>
@@ -280,14 +280,14 @@
                          <div>
                              <h3>Pro</h3>
                              <p class="price">$149</p>
-                             <p class="meal">That’s only $14.90 per meal</p>
+                             <p class="meal">That's only $14.90 per meal</p>
                          </div>
                          <div>
                              <ul>
-                                 <li>&#10003; 1 meal every 10 days/month</li>
-                                 <li>&#10003; Order 24/7</li>
-                                 <li>&#10003; Access to newest creations</li>
-                                 <li>&#10003; Free delivery</li>
+                                 <li>1 meal every 10 days/month</li>
+                                 <li>Order 24/7</li>
+                                 <li>Access to newest creations</li>
+                                 <li>Free delivery</li>
                              </ul>
                          </div>
                          <div>
@@ -299,13 +299,14 @@
                      <div class="plan-box">
                          <div>
                              <h3>Starter</h3>
-                             <p class="meal">That’s only $19 per meal</p>
+                              <p class="price">$149</p>
+                             <p class="meal">That's only $19 per meal</p>
                          </div>
                          <div>
                              <ul>
-                                 <li>&#10003; 1 meal</li>
-                                 <li>&#10003; Order from 8 am to 12 pm</li>
-                                 <li>&#10003; Free delivery</li>
+                                 <li>1 meal</li>
+                                 <li>Order from 8 am to 12 pm</li>
+                                 <li>Free delivery</li>
                              </ul>
                          </div>
                          <div>
