--- a/index.html
+++ b/index.html
@@ -264,10 +264,10 @@
                          </div>
                          <div>
                              <ul>
-                                 <li>1 meal every day</li>
-                                 <li>Order 24/7</li>
-                                 <li>Access to newest creations</li>
-                                 <li>Free delivery</li>
+                                 <li><i class='ion-ios-checkmark-empty'></i> 1 meal every day</li>
+                                 <li><i class='ion-ios-checkmark-empty'></i> Order 24/7</li>
+                                 <li><i class='ion-ios-checkmark-empty'></i> Access to newest creations</li>
+                                 <li><i class='ion-ios-checkmark-empty'></i> Free delivery</li>
                              </ul>
                          </div>
                          <div>
@@ -284,10 +284,10 @@
                          </div>
                          <div>
                              <ul>
-                                 <li>1 meal every 10 days/month</li>
-                                 <li>Order 24/7</li>
-                                 <li>Access to newest creations</li>
-                                 <li>Free delivery</li>
+                                 <li><i class='ion-ios-checkmark-empty'></i> 1 meal every 10 days/month</li>
+                                 <li><i class='ion-ios-checkmark-empty'></i> Order 24/7</li>
+                                 <li><i class='ion-ios-checkmark-empty'></i> Access to newest creations</li>
+                                 <li><i class='ion-ios-checkmark-empty'></i> Free delivery</li>
                              </ul>
                          </div>
                          <div>
@@ -299,17 +299,17 @@
                      <div class="plan-box">
                          <div>
                              <h3>Starter</h3>
-                              <p class="price">$149</p>
                              <p class="meal">That's only $19 per meal</p>
                          </div>
                          <div>
                              <ul>
-                                 <li>1 meal</li>
-                                 <li>Order from 8 am to 12 pm</li>
-                                 <li>Free delivery</li>
+                                 <li><i class='ion-ios-checkmark-empty'></i> 1 meal</li>
+                                 <li><i class='ion-ios-checkmark-empty'></i> Order from 8 am to 12 pm</li>
+                                 <li><i class="ion-ios-close-empty"></i></li>
+                                 <li><i class='ion-ios-checkmark-empty'></i> Free delivery</li>
                              </ul>
                          </div>
-                         <div>
+                         <div id='starter'>
                              <a href="#" class="btn btn-full">Sign up now</a>
                          </div>
                      </div>
