--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                              </ul>
                          </div>
                          <div>
-                             <a href="#" class="btn btn-full">Sign up now</a>
+                             <a href="#" class="btn btn-ghost">Sign up now</a>
                          </div>
                      </div>
                  </div>
@@ -299,7 +299,8 @@
                      <div class="plan-box">
                          <div>
                              <h3>Starter</h3>
-                             <p class="meal">That's only $19 per meal</p>
+                             <p class="price"></p>
+                             <p class="meal">$19 / meal</p>
                          </div>
                          <div>
                              <ul>
@@ -310,7 +311,7 @@
                              </ul>
                          </div>
                          <div id='starter'>
-                             <a href="#" class="btn btn-full">Sign up now</a>
+                             <a href="#" class="btn btn-ghost">Sign up now</a>
                          </div>
                      </div>
                  </div>
